#####################
Nagios 2.x Change Log
#####################


2.5 - ??/??/2006
----------------
* Bug fix for excluding hidden files from config file processing
* Bug fix for incorrect links to trends CGI from notification CGI



2.4 - 05/31/2006
----------------
* Fix for missing <limits.h> include that prevented CGI compilation under Solaris
* Better error message reporting in the command CGI (cmd.cgi)
* Fix for order of recovery/flapping notifications immediately after end of host/service flapping
* Bug fix for potential crash (SIGBUS) of CGIs when reading mmap()'ed status, comment, and downtime files
* Added 'install-unstripped' option to Makefile to allow installing unstripped binaries for debugging
* Minor bug fix to sample redundancy handle-master-proc-event script



2.3.1 - 05/15/2006
------------------
* Bug fix for HTTP content_length header integer overflow in CGIs



2.3 - 05/03/2006
----------------
* Bug fix for negative HTTP content_length header in CGIs
* Added missing links for notes_url and action_url to service column of status detail page



2.2 - 04/07/2006
----------------
* Minor bug fix in availability CGI
* Bug fix with temporary file location used for retention data
* Fix for segfault that occurred in 2.1 during service flapping notifications



2.1 - 03/27/2006
----------------
* Changed freshness logic so that passive checks don't immediately go stale after program restart
* Bug fix for minor memory leak in object cleanup code
* Bug fix for flapping notifications during scheduled downtime
* Bug fix for $TOTALHOSTSDOWNUNHANDLED$ macro
* Bug fix in sample minimal.cfg file
* Bug fix in status CGI when displaying servicegroups
* Bug fixes in computation of indeterminate time and scheduled downtime in availability CGI
* Bug fix with not deleting all comments associated with a service
* Lowered max plugin output length from 348 to 332 chars to run on 64-bit systems without problems
* Minor fix to p1.pl for embedded Perl interpreter